[package]
name = "sonic"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/main.rs"
name = "sonic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-macros = "0.3.8"
clap = { version = "4.4.6", features = ["derive"] }
hyper = { version = "0.14.27", features = ["full"] }
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
tokio = {version = "1.33.0", features = ["full"] }
